--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Random Simpsons Quote</title>
+    <title>When was the last time</title>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
 
 
