--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </section>
 
 <footer>
-  Amillionproducts. (c)<br />Quotes used for fun and learning.
+  Avocado products. (c)<br />
 </footer>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script>
 
