--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <br/>
   <br/>
 
- <cite>{{quote.info.whydont}}</cite>
+ <h2><cite>{{quote.info.whydont}}</cite></h2>
   </blockquote>
   <br/>
   <button ng-click="quote.pick()">Next</button>
