--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <h1>When was the last time</h1>
 
   <blockquote ng-click="quote.pick()">
-  When was  {{quote.info.line}}
+    <h2>  When was  {{quote.info.line}}</h2>
   <br/>
   <br/>
 
- <h2><cite>{{quote.info.whydont}}</cite></h2>
+ <h3><cite>{{quote.info.whydont}}</cite></h3>
   </blockquote>
   <br/>
   <button ng-click="quote.pick()">Next</button>
