--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
     <link rel="stylesheet" href="css/reset.css">
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
 
         <link rel="stylesheet" href="css/style.css">
